--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -1,7 +1,25 @@
+block globals
+
 doctype html
 html(lang="en")
-    head        
-        title My home page
+    head
+        link(href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css", 
+                rel="stylesheet", integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T", 
+                crossorigin="anonymous")
+
+        link(href="/css/styles.css", rel="stylesheet")
+
+        title = (title ? title : "I don't have a title yet!!")
 
     body
+        include ../partials/main-nav.pug
+
         block content
+
+        script(src='https://code.jquery.com/jquery-2.2.4.min.js' 
+                integrity='sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=' 
+                crossorigin='anonymous')
+
+        script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js", 
+                integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o", 
+                crossorigin="anonymous")
